# tpane

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/extensions/rust-docs-skill/: extension.mjs
.github/workflows/: ci.yml  release.yml
src/: app.rs  headless.rs  main.rs  tests_headless.rs  traits.rs
src/config/: defaults.rs  lua.rs  mod.rs
src/core/: commands.rs  keymap.rs  layout.rs  mod.rs  selection.rs
src/platform/: clipboard.rs  live.rs  mod.rs  pane.rs  renderer.rs
