[package]
name = "tpane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tpane"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
portable-pty = "0.8"
# Per-pane VT emulation — swap for libghostty-vt Rust bindings once available
alacritty_terminal = "0.26"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
dirs = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
